[package]
name = "token_launchpad"
version = "0.31.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_launchpad"

[features]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-log-ix-name = []

[dependencies]
anchor-lang = { git = "https://github.com/solana-foundation/anchor", rev = "54d5396" }
anchor-spl = { git = "https://github.com/solana-foundation/anchor", rev = "54d5396", features = ["token", "associated_token", "metadata"] }
curve25519-dalek = "4.0.0"
zeroize = "1.4.3"
borsh = "0.10.3"

[dev-dependencies]
anchor-client = { git = "https://github.com/solana-foundation/anchor", rev = "54d5396" }